Creates a model for cases
