# apps/judicial-system/api/src/app/modules/case/dto/updateCase.dto.ts
@@ -1,0 +1,13 @@
+import { IsString, IsOptional } from 'class-validator'
+import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger'
+
+export class UpdateCaseDto {
+  @IsString()
+  @ApiProperty()
+  readonly id: string
+
+  @IsOptional()
+  @IsString()
+  @ApiPropertyOptional()
+  readonly description: string
+}
